--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         
 
-       <div class="row justify-content-center align-items-center"></div>">
+       <div class="row justify-content-center align-items-center"></div>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
                 <li><a href="./pages/gatitosenadopcion.html">Gatitos en adopcion</a></li>
