hasta entrega proyecto final 2

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
+ 
+   <link rel="stylesheet" href="../assets/css/style.css">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body background="../assets/fotooo.jpg">
+
+    <header class="encabezado"> 
+        <h1>Patitas En Adopcion</h1>
+    </header>
     
-    <nav class="navbar">
-        <header> 
-            <h1>Patitas En Adopcion</h1>
-        </header>
-    <div class="cajalista">
+    <nav class="navegador">
+        
+    <div class="opciones">
     <ul>
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="./gatitosenadopcion.html">Gatitos en adopcion</a></li>
@@ -24,6 +29,7 @@
     </div>
 
     </nav>
+
     <br>
     <br>
     <br>
