--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,13 +12,13 @@
 </head>
 <body background="../assets/fotooo.jpg">
 
-    <header class="encabezado"> 
+    <header class="encabezadoScss"> 
         <h1>Patitas En Adopcion</h1>
     </header>
     
-    <nav class="navegador">
+    <nav class="navScss">
         
-    <div class="opciones">
+    <div class="opcionesscss">
     <ul>
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="./gatitosenadopcion.html">Gatitos en adopcion</a></li>
