--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -18,7 +18,7 @@
     
     <nav class="navScss">
         
-    <div class="opcionesscss">
+    <div class="opciones">
     <ul>
         <li><a href="../index.html">Inicio</a></li>
         <li><a href="./gatitosenadopcion.html">Gatitos en adopcion</a></li>
