--- a/pages/gatitosenadopcion.html
+++ b/pages/gatitosenadopcion.html
@@ -47,22 +47,22 @@
          
             <div class="hijo">
                 <img class="imganima" src="../assets/gato1.jpg" alt="">
-                <p class="pp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis consectetur mollitia unde consequatur eaque totam enim sint amet harum quas?</p>
+                <p class="pp">Ella es rita, la rescatamos del barrio 31, calculamos que tiene entre 4 y 5 años, es muy cariñosa, le encanta jugar y que le hagan mimos</p>
             </div>
 
             <div class="hijo">
                 <img class="imganima" src="../assets/gato3.jpg" alt="">
-                <p class="pp">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam modi tenetur possimus beatae quas, veniam facere. Recusandae maiores quidem dolorem.</p>
+                <p class="pp">El es tito, tiene 1 año aproximadamente, es muy jugeton, le gusta tener su espacio y que lo acaricien hasta dormirse</p>
             </div>
 
             <div class="hijo">
                  <img class="imganima" src="../assets/gato4.jpg" alt="">
-                 <p class="pp">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laboriosam autem et assumenda. Aperiam voluptate quae fugit, quibusdam quod architecto.</p>
+                 <p class="pp">ella es agatha, tiene 1 año aproximadamente, la rescatamos cuando tenia 5 meses y por ahora nadie la adopto, es muy cariiñosa y simpatica</p>
             </div>
 
             <div class="hijo">
                 <img class="imganima" src="../assets/gettyimages-1199242002.jpg" alt="">
-                 <p class="pp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat eius voluptatum iste a doloribus cumque ad consectetur aliquam alias laudantium?</p>
+                 <p class="pp">el es coco, tiene 4 meses, es muy hermoso y tierno</p>
             </div>
 
         </div>
