--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,15 +11,14 @@
 </head>
 <body>
   
+    <header class="encabezado"> 
+        <h1> Patitas En Adopcion</h1>
+    </header>
+
     
-    <nav class="navbar">
+    <nav class="navScss" >
 
-        <header class="encabezado"> 
-            <h1> Patitas En Adopcion</h1>
-        </header>
-
-
-       <div class="row justify-content-center align-items-center"></div>">
+        <div class="opciones">
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./gatitosenadopcion.html">Gatitos en adopcion</a></li>
@@ -31,7 +30,7 @@
 
     </nav>
     <main>
-        <br><br><br><br><br><br><br><br><br>
+        <br>
         <div class="tarjetas">
 
             <div class=" col-12 justify-content-center align-items-center">
@@ -39,12 +38,21 @@
             <h5 class=" text-center justify-content-center align-items-center">¿Quienes somos?</h5>
             <br>
             <p class="col-12 text-center ">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima impedit maxime debitis, aliquam perspiciatis praesentium velit quam accusantium voluptatem nobis dolore dignissimos quo, veritatis veniam nesciunt earum, voluptatibus dolorum ratione.
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-            <br>Harum aperiam at ratione laborum maiores explicabo officia 
-            <br>labore corporis, provident voluptates, dolore doloremque quisquam 
-            <br>nam. Obcaecati eos et similique repudiandae aperiam?
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa animi corrupti, tenetur minus repellat error delectus ratione ipsum labore eaque, debitis a voluptatum quos? Voluptatum aliquid fugiat eum accusantium impedit.</p>
+                En patitas al rescate creemos firmemente que, entre todos los animales, los perros son aquellos a quienes más les debemos, ya que nosotros, los humanos, los sacamos de su hábitat original para incorporarlos a nuestras comunidades y ponerlos a nuestro servicio, pensando siempre en nuestras necesidades y muy poco en las de ellos. Por eso es nuestra obligación como especie, respetarlos, protegerlos y asegurarles vidas dignas.
+
+​
+
+La Fundación tiene la misión principal de rescatar perros en riesgo
+y buscarles un hogar definitivo. Otro objetivo de la Fundación es llevar a cabo acciones de difusión y concientización sobre las responsabilidades inherentes a la tenencia de un animal de compañía.
+
+​
+
+En nuestra Colonia Canina albergamos animalitos  que han sido rescatados de la calle o de situaciones de abuso, y los recuperamos para que puedan ser incorporados a una familia a través de la adopción responsable. 
+Muchos de ellos tienen la suerte de encontrar un hogar definitivo, mientras que otros se quedan con nosotros por el resto de sus vidas, y es nuestro compromiso asegurar que cada animalito  tenga una buena vida en nuestra Colonia, incluyendo excelente alimentación, cuidados veterinarios, cariño y juego, sin importar cuánto tiempo deba vivir allí.
+
+ 
+
+Nuestro Centro de Adopciones está siempre abierto a quienes estén buscando una mascota para amar y cuidar.  Durante todo el año hay perritos de todas las edades, tamaños y colores esperando que lleguen sus nuevos humanos. </p>
             <p></p>
 
             </div>
